# evict

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  README.txt  build  build_test  install  make_test  run_tests
.evict/: issues.ebtd  status_types
.evict/issue-dirs/1377211624517830828/: 1382149572156840844  1382149572156922896  1382149572172574255  body
.evict/issue-dirs/1378109326271617127/: 1382149572157150670  1382149572157191073  1382149572172952457  1382149572172993483  1382149572173038669  body
.evict/issue-dirs/1378272368275278886/: 1382149572157459129  body
.evict/issue-dirs/1378895227961807189/: 1382149572157590191  1382149572157629738  1382149572173331172  body
.evict/issue-dirs/1378895309528680784/: 1382149572157805846  body
.evict/issue-dirs/1378895528148572929/: body
.evict/issue-dirs/1379228591574109404/: 1382149572158006005  body
.evict/issue-dirs/1379228656458843526/: 1382149572158129975  body
.evict/issue-dirs/1379231256957690566/: 1382149572158256785  1382149572173768678  body
src/: config.rs  date_sort.rs  evict.rc  evict.rs  file_manager.rs  file_util.rs  fsm.rc  fsm.rs  issue.rs  merge.rs  selection.rs  status_storage.rs  vcs_status.rs
src/commands/: clear.rs  comment.rs  create.rs  default_author.rs  default_status.rs  delete.rs  list.rs  merge.rs  mod.rs  new_status.rs  set_status.rs  sync.rs
src/evict/: config.rs  date_sort.rs  file_manager.rs  file_util.rs  issue.rs  main.rs  merge.rs  selection.rs  serdetime.rs  status_storage.rs  vcs_status.rs
src/evict/commands/: clear.rs  mod.rs  (+13 more)
src/fsm/: lib.rs
(+57 files in other folders)
