[package]

name = "evict"
version = "0.1.0"
authors = ["Brandon Sanderson <bas.bsanders@gmail.com>"]

[[bin]]
name = "evict"
path = "src/evict/main.rs"
test = true

[dependencies]
genfsm = "*"
serde = "*"
serde_macros = "*"
error-type = "*"

[dependencies.time]
git = "https://github.com/brandonson/time"
branch = "hashable-times"
